k8s/nginx-ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: collaboration
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: collaboration.io
    http:
      paths:
      - backend:
          serviceName: collaboration
          servicePort: 5000
